# insighta-api

./: Cargo.toml  Dockerfile  README.md  SOLUTION.md
src/: cache.rs  config.rs  countries.rs  errors.rs  handlers.rs  lib.rs  main.rs  normalizer.rs  parser.rs  seeder.rs  utils.rs
src/auth/: github.rs  mod.rs  pkce.rs  tokens.rs
src/handlers/: auth.rs  mod.rs  profile.rs  user.rs  web_auth.rs
src/middleware/: api_version.rs  auth.rs  csrf.rs  mod.rs  rate_limit.rs  request_id.rs  role.rs
src/models/: auth.rs  country.rs  db.rs  gender.rs  mod.rs  profile.rs  seed.rs  user.rs  users.rs
src/repo/: mod.rs  profile.rs  refresh_token.rs  user.rs
tests/: auth_tests.rs  parser_tests.rs
