[package]
name = "stage1"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.5.2"
axum = "0.8.9"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "rustls", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v7"] }
lazy_static = "1.5.0"

[[bin]]
name = "stage1"
path = "src/main.rs"

[lib]
name = "stage1"
path = "src/lib.rs"
