[package]
name = "insighta_api"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.5.2"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "rustls", "query", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.1", features = ["v7", "serde"] }
bson = { version = "2.13.0", features = ["uuid-1", "chrono-0_4"] }
lazy_static = "1.5.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sha2 = "0.11.0"
rand = "0.10.1"
base64 = "0.22.1"
hex = "0.4.3"
dashmap = "6.1.0"
csv = "1.4.0"
tower-cookies = "0.11.0"

[[bin]]
name = "insighta_api"
path = "src/main.rs"

[lib]
name = "insighta_api"
path = "src/lib.rs"
